--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,17 @@
             <version>3.4.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.17</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.17</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>Java_Spring_REST_project</finalName>
